<resources>
    <string name="app_name">EasyCar</string>

    <string name="emailEasyCar">easycar@ddt.it</string>

    <string name="navigation_drawer_open">Apri navigation drawer</string>
    <string name="navigation_drawer_close">Chiudi navigation drawer</string>

    <string name="action_settings">Impostazioni</string>
    <string name="assicurazione">Assicurazione</string>
    <string name="bollo">Bollo</string>
    <string name="revisione">Revisione</string>
    <string name="tipoLabel">Tipo: </string>
    <string name="title_activity_prendi_foto">PrendiFoto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">Data</string>
    <string name="targa"> Targa </string>
    <string name="modello"> Modello </string>
    <string name="chilometraggio">Chilometraggio</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="ripetiPassword">Ripeti password</string>
    <string name="scadenza">Scadenza</string>
    <string name="descrizione">Descrizione</string>
    <string name="auto">Auto</string>
    <string name="nomeUtente">Nome</string>
    <string name="cognomeUtente">Cognome</string>
    <string name="dataNascita">Data di nascita</string>
    <string name="immatricolazione">Anno immatricolazione</string>
    <string name="manutenzione">Manutenzione</string>
    <string name="aggiungiFoto"> aggiungi foto </string>
    <string name="album_name"> EasyCar foto</string>
    <string name="cannot">Cannot</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="selezioneAuto">Seleziona il veicolo</string>
    <string name="marca">Marca</string>
    <string name="Ordinaria">Ordinaria</string>
    <string name="Tipo">Tipo</string>
    <string name="Accedi">Accedi</string>
    <string name="Registrati">Registrati</string>
    <string name="veicoloLasciato">HAI LASCIATO IL TUO VEICOLO IN: </string>
    <string name="Anno">Anno</string>
    <string name="Cilindrata">Cilindrata</string>
    <string name="KmAttuali">Km attuali</string>
    <string name="bottonePosizione">Ho parcheggiato</string>
    <string name="Auto">Auto</string>
    <string name="Data">Data</string>
    <string name="Titolo">Titolo</string>
    <string name="Informazione">Informazione</string>
    <string name="Home">Home</string>
    <string name="MieAuto">Mie Auto</string>
    <string name="Scadenze">Scadenze</string>
    <string name="Problemi">Problemi</string>
    <string name="Manutenzioni">Manutenzioni</string>
    <string name="PosizioneVeicolo">Posizione veicolo</string>
    <string name="MessaggioGps">Il GPS è disabilitato sul tuo dispositivo. Vuoi abilitarlo?</string>
    <string name="MessaggioGps1">Vail alle impostazioni per abilitare il GPS</string>
    <string name="MessaggioGps2">Indietro</string>
    <string name="AggiuntaAuto">Aggiunta auto</string>
    <string name="AggiuntaProblema">Aggiunta problema</string>
    <string name="RegistraUtente">Registrazione utente</string>
    <string name="AggiuntaScadenza">Aggiunta scadenza</string>
    <string name="PosizioneAuto">Posizione veicolo</string>
    <string name="AggiuntaManutenzione">Aggiunta manutenzione</string>

    <string name="TitoloDialog">Sei sicuro di voler eliminare?</string>
    <string name="MessageDialog">Click su si per confermare</string>
    <string name="PositiveButton">Si</string>
    <string name="NegtiveButton">No</string>

    <string name="gennaio">GEN</string>
    <string name="febbraio">Febbraio</string>
    <string name="marzo">Marzo</string>
    <string name="aprile">Aprile</string>
    <string name="maggio">Maggio</string>
    <string name="giugno">Giugno</string>
    <string name="luglio">Luglio</string>
    <string name="agosta">Agosto</string>
    <string name="settembre">Settembre</string>
    <string name="ottobre">Ottobre</string>
    <string name="novembre">Novembre</string>
    <string name="dicembre">Dicembre</string>
    <string-array name="menu">
        <item>Modifica</item>
        <item>Elimina</item>
    </string-array>
    <string name="no_location_detected">
       Posizione non trovata. Assicurarsi che il gps sia attivo.
    </string>
</resources>
