<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ddt.sms16.ivu.di.uniba.it.easycar.fragments.AggiuntaScadenzaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_marginLeft="93dp"
            android:layout_marginStart="93dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tipoScadenzaRadioGroup">

            <RadioButton android:id="@+id/radio_assicurazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assicurazione"
                />

            <RadioButton android:id="@+id/radio_bollo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bollo"
                 />

            <RadioButton android:id="@+id/radio_revisione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revisione"
           />

        </RadioGroup>

        <TextView
            android:text="@string/tipoLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView3"
            android:textSize="24sp"
            android:layout_alignTop="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp" />


    </RelativeLayout>


</FrameLayout>
