<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ddt.sms16.ivu.di.uniba.it.easycar.RegistrazioneUtente">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:orientation="vertical"
        android:paddingLeft="@dimen/paddingLeftForm"
        android:paddingTop="@dimen/paddingTop">
        <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nomeUtente"
                    android:layout_width="@dimen/withEditTextForm"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/formTextSize"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:hint="@string/nomeUtente"
                    android:singleLine="true" />


   </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
                    android:id="@+id/cognomUtente"
                    android:layout_width="@dimen/withEditTextForm"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/formTextSize"
                    android:hint="@string/cognomeUtente"
                    android:singleLine="true" />

    </LinearLayout>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dataUtente"
                    android:layout_width="@dimen/withEditTextForm"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/formTextSize"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:hint="@string/dataNascita"
                    android:singleLine="true" />


   </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="@dimen/withEditTextForm"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/formTextSize"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:hint="@string/email"
                    android:singleLine="true" />


    </LinearLayout>


    </LinearLayout>

</LinearLayout>
