<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/paddingLeftForm"
        android:paddingRight="@dimen/paddingRightIcon"
        android:paddingTop="@dimen/paddingTop"
        android:orientation="vertical">
        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
           <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:paddingTop="@dimen/paddingTopIcon"
              android:src="@drawable/ic_credit_card_grey600_24dp"
                android:layout_gravity="center"
                android:paddingRight="@dimen/paddingRightIcon"
                />
                    <EditText
                        android:id="@+id/autoTarga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/colorBackground"
                        android:textStyle="bold"
                        android:hint="@string/targa"
                        />

                </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

         <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_calendar_check_grey600_36dp"
               android:layout_gravity="center"
             android:paddingTop="@dimen/paddingTopIcon"
               android:paddingRight="@dimen/paddingRightIcon"

               />
                    <EditText
                        android:id="@+id/anno_imm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/colorBackground"
                        android:textStyle="bold"
                        android:hint="@string/immatricolazione"
                        android:singleLine="true" />


       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_gauge_grey600_24dp"
               android:layout_gravity="center"
               android:paddingTop="@dimen/paddingTopIcon"
               android:paddingRight="@dimen/paddingRightIcon"
               />
                    <EditText
                        android:id="@+id/chilometraggio_auto"
                        android:layout_width="@dimen/withEditTextForm"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/colorBackground"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:hint="@string/chilometraggio"
                        android:singleLine="true" />

       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/marca"
                android:paddingTop="@dimen/paddingTop"
                android:layout_gravity="center"
                android:textSize="@dimen/formTextSize"
                 />
            <Spinner
                android:paddingTop="@dimen/paddingTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_marca"
                android:paddingLeft="30dp"
                >

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/modello"
                android:paddingTop="@dimen/paddingTop"
                android:layout_gravity="center"
                android:textSize="@dimen/formTextSize"
                 />
            <Spinner
                android:paddingTop="@dimen/paddingTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_modello"
                android:paddingLeft="15dp"
                >

            </Spinner>
        </LinearLayout>

</LinearLayout>

    </LinearLayout>
