<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorBackground"></android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingLeftForm"
        android:paddingRight="@dimen/paddingRightIcon"
        android:paddingTop="@dimen/paddingTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingRight="@dimen/paddingRightIcon"
                android:src="@drawable/ic_comment_text_outline_grey600_18dp" />

            <EditText
                android:id="@+id/descrizioneManutenzione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descrizione"
                android:inputType="text"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:paddingRight="@dimen/paddingRightIcon"
                    android:paddingTop="@dimen/paddingTopIcon"
                    android:src="@drawable/ic_calendar_clock_grey600_24dp" />

                <EditText
                    android:id="@+id/dataManutenzione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/manutenzione"
                    android:inputType="numberDecimal"
                    android:onClick="onClick"
                    android:singleLine="true"
                    android:textColor="@color/colorBackground"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:paddingRight="@dimen/paddingRightIcon"
                    android:paddingTop="@dimen/paddingTopIcon"
                    android:src="@drawable/ic_wrench_grey600_24dp" />

                <Switch
                    android:id="@+id/toggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/paddingTop"
                    android:text="@string/Ordinaria"
                    android:textColor="@color/colorTextF"
                    android:textSize="@dimen/formTextSize" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingRight="@dimen/paddingRightIcon"
                android:paddingTop="@dimen/paddingTopIcon"
                android:src="@drawable/ic_gauge_grey600_24dp" />

            <EditText
                android:id="@+id/chilometraggio_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/chilometraggio"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/colorBackground"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/paddingRightIcon"
                android:src="@drawable/ic_car_grey600_24dp" />

            <Spinner
                android:id="@+id/spinner_veicolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>