<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ddt.sms16.ivu.di.uniba.it.easycar.DettaglioAutoUtente"
    tools:showIn="@layout/fragment_detail_auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/targa"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/txtViewTarga"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:text="BD908DS"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:orientation="vertical">


        <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/marca"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/txtViewMarca"
                android:text="Alfa Romeo"
                android:textStyle="normal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/modello"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/txtViewModello"
                android:text="159"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/Anno"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/txtViewAnno"
                android:text="1999"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Cilindrata"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/txtViewCilindrata"
                android:text="1900cc"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Km attuali"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/txtViewKm"
                android:text="12500"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />
        </LinearLayout>




    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
